--- a/quix.yaml
+++ b/quix.yaml
@@ -21,11 +21,4 @@ deployments:
     variables: []
 
 # This section describes the Topics of the data pipeline
-topics:
-  - name: output-topic
-    persisted: false
-    configuration:
-      partitions: 2
-      replicationFactor: 2
-      retentionInMinutes: -1
-      retentionInBytes: 1048576000
+topics: []
