Add topic ai-chat-history

--- a/quix.yaml
+++ b/quix.yaml
@@ -29,3 +29,10 @@ topics:
       replicationFactor: 2
       retentionInMinutes: 240
       retentionInBytes: 52428800
+  - name: ai-chat-history
+    persisted: false
+    configuration:
+      partitions: 2
+      replicationFactor: 2
+      retentionInMinutes: 60
+      retentionInBytes: 52428800
