--- a/quix.yaml
+++ b/quix.yaml
@@ -19,6 +19,21 @@ deployments:
       urlPrefix: llama2container-66f765f
     desiredStatus: Stopped
     variables: []
+  - name: AI Customer
+    application: AI Customer
+    deploymentType: Service
+    version: b6c441f64cbc72ca141cf7997f7fc78bdc6bcd6a
+    resources:
+      cpu: 1000
+      memory: 8000
+      replicas: 1
+    desiredStatus: Running
+    variables:
+      - name: output
+        inputType: OutputTopic
+        description: This is the output topic to write data to
+        required: true
+        value: ai-chat-history
 
 # This section describes the Topics of the data pipeline
 topics:
