'AI Customer/app.yaml' edited via Quix Portal

--- a/AI Customer/app.yaml
+++ b/AI Customer/app.yaml
@@ -6,6 +6,11 @@ variables:
     description: This is the output topic to write data to
     defaultValue: ai-chat-history
     required: true
+  - name: product
+    inputType: InputTopic
+    description: ''
+    defaultValue: printer
+    required: true
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
