--- a/AI Customer/app.yaml
+++ b/AI Customer/app.yaml
@@ -7,7 +7,7 @@ variables:
     defaultValue: ai-chat-history
     required: true
   - name: product
-    inputType: InputTopic
+    inputType: FreeText
     description: ''
     defaultValue: printer
     required: true
