--- a/AI Customer Support Agent/app.yaml
+++ b/AI Customer Support Agent/app.yaml
@@ -6,6 +6,11 @@ variables:
     description: This is the output topic to write data to
     defaultValue: output-topic
     required: true
+  - name: product
+    inputType: FreeText
+    description: ''
+    defaultValue: printer
+    required: false
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
