--- a/quix.yaml
+++ b/quix.yaml
@@ -5,7 +5,30 @@ metadata:
   version: 1.0
 
 # This section describes the Deployments of the data pipeline
-deployments: []
+deployments:
+  - name: AI Customer
+    application: AI Customer
+    deploymentType: Service
+    version: b7a43c2588f1ae793511a778f0207b578e98632d
+    resources:
+      cpu: 200
+      memory: 500
+      replicas: 1
+    state:
+      enabled: true
+      size: 6
+    desiredStatus: Running
+    variables:
+      - name: output
+        inputType: OutputTopic
+        description: This is the output topic to write data to
+        required: true
+        value: ai-chat-history
+      - name: product
+        inputType: FreeText
+        description: ''
+        required: true
+        value: printer
 
 # This section describes the Topics of the data pipeline
 topics:
