--- a/quix.yaml
+++ b/quix.yaml
@@ -28,7 +28,7 @@ deployments:
         inputType: FreeText
         description: ''
         required: true
-        value: smart toilet
+        value: roomba vacum cleaner
   - name: AI Support Agent
     application: AI Customer Support Agent
     deploymentType: Service
