--- a/quix.yaml
+++ b/quix.yaml
@@ -70,7 +70,7 @@ topics:
       retentionInMinutes: 60
       retentionInBytes: 52428800
   - name: ai-chat-history-with-sentiment
-    persisted: false
+    persisted: true
     configuration:
       partitions: 1
       replicationFactor: 2
