Add deployment Sentiment Analyzer

--- a/quix.yaml
+++ b/quix.yaml
@@ -52,6 +52,31 @@ deployments:
         description: ''
         required: false
         value: roomba vacum cleaner
+  - name: Sentiment Analyzer
+    application: Sentiment Analyzer
+    deploymentType: Service
+    version: 299bbf9fbc280aa902db6b8b56630ed3d3657674
+    resources:
+      cpu: 2000
+      memory: 4000
+      replicas: 1
+    desiredStatus: Running
+    variables:
+      - name: input
+        inputType: InputTopic
+        description: Name of the input topic to listen to.
+        required: false
+        value: ai-chat-history
+      - name: output
+        inputType: OutputTopic
+        description: Name of the output topic to write to.
+        required: true
+        value: ai-chat-history-with-sentiment
+      - name: buffer_delay
+        inputType: FreeText
+        description: Input buffer configuration (timeout and timespan in milliseconds).
+        required: false
+        value: 0
 
 # This section describes the Topics of the data pipeline
 topics:
