Update topic ai-chat-messages

--- a/quix.yaml
+++ b/quix.yaml
@@ -56,7 +56,7 @@ deployments:
 # This section describes the Topics of the data pipeline
 topics:
   - name: ai-chat-messages
-    persisted: false
+    persisted: true
     configuration:
       partitions: 2
       replicationFactor: 2
