--- a/Chatbot/app.yaml
+++ b/Chatbot/app.yaml
@@ -4,7 +4,7 @@ variables:
   - name: topic
     inputType: OutputTopic
     description: Chat topic
-    defaultValue: hello-world-source
+    defaultValue: ''
     required: true
 dockerfile: build/dockerfile
 runEntryPoint: main.py
