'Chatbot/app.yaml' edited via Quix Portal

--- a/Chatbot/app.yaml
+++ b/Chatbot/app.yaml
@@ -6,6 +6,11 @@ variables:
     description: Chat topic
     defaultValue: ''
     required: true
+  - name: role
+    inputType: FreeText
+    description: 'Chatbot role: AGENT, CUSTOMER'
+    defaultValue: ''
+    required: true
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
