--- a/Chatbot/app.yaml
+++ b/Chatbot/app.yaml
@@ -4,7 +4,7 @@ variables:
   - name: topic
     inputType: OutputTopic
     description: Chat topic
-    defaultValue: ''
+    defaultValue: ai-chat-history
     required: true
   - name: role
     inputType: FreeText
