Add topic sentiment

--- a/quix.yaml
+++ b/quix.yaml
@@ -158,3 +158,10 @@ topics:
       replicationFactor: 2
       retentionInMinutes: -1
       retentionInBytes: 52428800
+  - name: sentiment
+    persisted: false
+    configuration:
+      partitions: 8
+      replicationFactor: 2
+      retentionInMinutes: -1
+      retentionInBytes: 52428800
