--- a/quix.yaml
+++ b/quix.yaml
@@ -152,7 +152,7 @@ topics:
       retentionInMinutes: 1440
       retentionInBytes: 52428800
   - name: messages
-    persisted: false
+    persisted: true
     configuration:
       partitions: 8
       replicationFactor: 2
