--- a/quix.yaml
+++ b/quix.yaml
@@ -159,7 +159,7 @@ topics:
       retentionInMinutes: -1
       retentionInBytes: 52428800
   - name: sentiment
-    persisted: false
+    persisted: true
     configuration:
       partitions: 8
       replicationFactor: 2
