--- a/Sentiment Analyzer/app.yaml
+++ b/Sentiment Analyzer/app.yaml
@@ -4,7 +4,7 @@ variables:
   - name: input
     inputType: InputTopic
     description: Name of the input topic to listen to.
-    defaultValue: ai-chat-history
+    defaultValue: messages
     required: false
   - name: output
     inputType: OutputTopic
