--- a/quix.yaml
+++ b/quix.yaml
@@ -165,3 +165,10 @@ topics:
       replicationFactor: 2
       retentionInMinutes: -1
       retentionInBytes: 52428800
+  - name: messages
+    persisted: false
+    configuration:
+      partitions: 8
+      replicationFactor: 2
+      retentionInMinutes: -1
+      retentionInBytes: 52428800
