--- a/quix.yaml
+++ b/quix.yaml
@@ -65,7 +65,7 @@ deployments:
       cpu: 2000
       memory: 4000
       replicas: 1
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: input
         inputType: InputTopic
