--- a/AI Customer/app.yaml
+++ b/AI Customer/app.yaml
@@ -1,7 +1,7 @@
 name: AI Customer
 language: python
 variables:
-  - name: output
+  - name: topic
     inputType: OutputTopic
     description: This is the output topic to write data to
     defaultValue: ai-chat-history
