--- a/AI Customer Support Agent/app.yaml
+++ b/AI Customer Support Agent/app.yaml
@@ -1,7 +1,7 @@
 name: AI Support Agent
 language: python
 variables:
-  - name: output
+  - name: topic
     inputType: OutputTopic
     description: This is the output topic to write data to
     defaultValue: ai-chat-history
