--- a/quix.yaml
+++ b/quix.yaml
@@ -45,7 +45,7 @@ deployments:
     state:
       enabled: true
       size: 6
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: output
         inputType: OutputTopic
