'AI Customer/app.yaml' edited via Quix Portal

--- a/AI Customer/app.yaml
+++ b/AI Customer/app.yaml
@@ -17,7 +17,7 @@ variables:
     defaultValue: drafts
     required: true
   - name: scenario
-    inputType: InputTopic
+    inputType: FreeText
     description: ''
     defaultValue: ''
     required: true
