--- a/quix.yaml
+++ b/quix.yaml
@@ -50,7 +50,7 @@ deployments:
     state:
       enabled: true
       size: 6
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: output
         inputType: OutputTopic
