'AI Customer/app.yaml' edited via Quix Portal

--- a/AI Customer/app.yaml
+++ b/AI Customer/app.yaml
@@ -21,6 +21,11 @@ variables:
     description: ''
     defaultValue: ''
     required: true
+  - name: role
+    inputType: FreeText
+    description: ''
+    defaultValue: ''
+    required: true
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
