--- a/quix.yaml
+++ b/quix.yaml
@@ -138,7 +138,7 @@ deployments:
       cpu: 8000
       memory: 4100
       replicas: 1
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: output
         inputType: OutputTopic
