--- a/quix.yaml
+++ b/quix.yaml
@@ -9,7 +9,7 @@ deployments:
   - name: AI Customer
     application: AI Customer
     deploymentType: Service
-    version: f3ca3e17d9557b4650e428d1a647f68334224220
+    version: c47191db111bbf6bd0c24d617ac8406762fe934f
     resources:
       cpu: 8000
       memory: 8000
@@ -39,6 +39,11 @@ deployments:
         description: ''
         required: true
         value: "The following transcript represents a conversation between you, a customer of a large electronics retailer called 'ACME electronics', and a support agent who you are contacting to resolve an issue with a defective {product} you purchased. Your goal is try and understand what your options are for resolving the issue. Please continue the conversation, but only reply as CUSTOMER:"
+      - name: role
+        inputType: FreeText
+        description: ''
+        required: true
+        value: customer
   - name: AI Support Agent
     application: AI Customer Support Agent
     deploymentType: Service
