--- a/quix.yaml
+++ b/quix.yaml
@@ -170,6 +170,26 @@ deployments:
         description: ''
         required: true
         value: agent
+  - name: SentimentAnalysis
+    application: SentimentAnalysis
+    deploymentType: Service
+    version: db75fa525d579fbe3e13997b467bbfe579209601
+    resources:
+      cpu: 2000
+      memory: 2000
+      replicas: 1
+    desiredStatus: Running
+    variables:
+      - name: input
+        inputType: InputTopic
+        description: Name of the input topic to listen to.
+        required: false
+        value: messages
+      - name: output
+        inputType: OutputTopic
+        description: Name of the output topic to write to.
+        required: true
+        value: sentiment
 
 # This section describes the Topics of the data pipeline
 topics:
