--- a/quix.yaml
+++ b/quix.yaml
@@ -75,7 +75,7 @@ deployments:
       cpu: 2000
       memory: 4000
       replicas: 1
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: input
         inputType: InputTopic
