--- a/quix.yaml
+++ b/quix.yaml
@@ -9,7 +9,7 @@ deployments:
   - name: AI Customer
     application: AI Customer
     deploymentType: Service
-    version: e6d683ec78c0b82b34d8f339b209143010b3f5bc
+    version: v1
     resources:
       cpu: 8000
       memory: 8000
