--- a/quix.yaml
+++ b/quix.yaml
@@ -190,6 +190,31 @@ deployments:
         description: Name of the output topic to write to.
         required: true
         value: sentiment
+  - name: Customer sink
+    application: Converstations sink
+    deploymentType: Service
+    version: 5b8d4c13aab0971fbc3205a9ca0732e4a764a810
+    resources:
+      cpu: 1000
+      memory: 500
+      replicas: 1
+    desiredStatus: Running
+    variables:
+      - name: input
+        inputType: InputTopic
+        description: Name of the input topic to listen to.
+        required: false
+        value: drafts
+      - name: output
+        inputType: OutputTopic
+        description: Name of the output topic to write to.
+        required: false
+        value: transform
+      - name: consumer_group
+        inputType: FreeText
+        description: ''
+        required: true
+        value: transformation-v10-customer
 
 # This section describes the Topics of the data pipeline
 topics:
