--- a/quix.yaml
+++ b/quix.yaml
@@ -218,7 +218,7 @@ deployments:
       cpu: 1000
       memory: 500
       replicas: 1
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: input
         inputType: InputTopic
