--- a/quix.yaml
+++ b/quix.yaml
@@ -128,7 +128,7 @@ deployments:
       cpu: 8000
       memory: 4100
       replicas: 1
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: output
         inputType: OutputTopic
