--- a/AI Customer/app.yaml
+++ b/AI Customer/app.yaml
@@ -8,7 +8,7 @@ variables:
     required: true
   - name: product
     inputType: FreeText
-    description: ''
+    description: roomba vacum cleaner
     defaultValue: printer
     required: true
   - name: draft_topic
