Update topic sentiment

--- a/quix.yaml
+++ b/quix.yaml
@@ -305,7 +305,7 @@ topics:
       retentionInMinutes: 1440
       retentionInBytes: 52428800
   - name: sentiment
-    persisted: true
+    persisted: false
     configuration:
       partitions: 8
       replicationFactor: 2
