--- a/quix.yaml
+++ b/quix.yaml
@@ -138,11 +138,14 @@ deployments:
   - name: Agent AI
     application: AI Customer
     deploymentType: Service
-    version: v1.3-ai
+    version: v1.4-ai
     resources:
       cpu: 8000
       memory: 16384
       replicas: 1
+    state:
+      enabled: true
+      size: 1
     desiredStatus: Running
     variables:
       - name: output
