--- a/ConversationStarter/app.yaml
+++ b/ConversationStarter/app.yaml
@@ -4,8 +4,8 @@ variables:
   - name: output
     inputType: OutputTopic
     description: Name of the output topic to write to.
-    defaultValue: drafts
-    required: false
+    defaultValue: messages
+    required: true
 dockerfile: build/dockerfile
 runEntryPoint: main.py
 defaultFile: main.py
