--- a/quix.yaml
+++ b/quix.yaml
@@ -146,7 +146,7 @@ deployments:
     state:
       enabled: true
       size: 1
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: output
         inputType: OutputTopic
