--- a/Converstations sink/app.yaml
+++ b/Converstations sink/app.yaml
@@ -2,10 +2,10 @@ name: Converstations sink
 language: python
 variables:
   - name: input
-    inputType: InputTopic
+    inputType: FreeText
     description: Name of the input topic to listen to.
-    defaultValue: drafts
-    required: false
+    defaultValue: ''
+    required: true
   - name: consumer_group
     inputType: FreeText
     description: ''
