--- a/quix.yaml
+++ b/quix.yaml
@@ -185,6 +185,20 @@ deployments:
         description: ''
         required: true
         value: transformation-v10-agent
+  - name: ConversationStarter
+    application: ConversationStarter
+    deploymentType: Job
+    version: v1-starter
+    resources:
+      cpu: 200
+      memory: 500
+      replicas: 1
+    variables:
+      - name: output
+        inputType: OutputTopic
+        description: Name of the output topic to write to.
+        required: true
+        value: messages
 
 # This section describes the Topics of the data pipeline
 topics:
