--- a/quix.yaml
+++ b/quix.yaml
@@ -194,6 +194,26 @@ deployments:
         description: Name of the output topic to write to.
         required: true
         value: messages
+  - name: PromptController
+    application: PromptController
+    deploymentType: Service
+    version: 8d9b74a01742e25655014faa0392a7060a338d0f
+    resources:
+      cpu: 200
+      memory: 500
+      replicas: 1
+    desiredStatus: Running
+    variables:
+      - name: input
+        inputType: InputTopic
+        description: Name of the input topic to listen to.
+        required: false
+        value: sentiment
+      - name: output
+        inputType: OutputTopic
+        description: Name of the output topic to write to.
+        required: true
+        value: messages
 
 # This section describes the Topics of the data pipeline
 topics:
