--- a/quix.yaml
+++ b/quix.yaml
@@ -85,7 +85,7 @@ deployments:
   - name: Agent AI
     application: AI Customer
     deploymentType: Service
-    version: v1.6-ai
+    version: 2357563888604d3be5bf962db5cc2a6bf8c3cd83
     resources:
       cpu: 8000
       memory: 8000
