--- a/quix.yaml
+++ b/quix.yaml
@@ -148,7 +148,7 @@ deployments:
       cpu: 2000
       memory: 500
       replicas: 1
-    desiredStatus: Running
+    desiredStatus: Stopped
     variables:
       - name: input
         inputType: FreeText
