--- a/quix.yaml
+++ b/quix.yaml
@@ -140,26 +140,6 @@ deployments:
         description: Name of the output topic to write to.
         required: true
         value: sentiment
-  - name: Customer Bots stopper
-    application: Converstations sink
-    deploymentType: Service
-    version: v1.1-sink
-    resources:
-      cpu: 2000
-      memory: 500
-      replicas: 1
-    desiredStatus: Running
-    variables:
-      - name: input
-        inputType: FreeText
-        description: Name of the input topic to listen to.
-        required: true
-        value: messages
-      - name: consumer_group
-        inputType: FreeText
-        description: ''
-        required: true
-        value: transformation-v10-customer
   - name: AI Bots stopper
     application: Converstations sink
     deploymentType: Service
@@ -214,6 +194,26 @@ deployments:
         description: Name of the output topic to write to.
         required: true
         value: messages
+  - name: Sentiment drain
+    application: Converstations sink
+    deploymentType: Service
+    version: 86c6222e1db9af04d18db71bd6d996309456cace
+    resources:
+      cpu: 2000
+      memory: 500
+      replicas: 1
+    desiredStatus: Running
+    variables:
+      - name: input
+        inputType: FreeText
+        description: Name of the input topic to listen to.
+        required: true
+        value: messages
+      - name: consumer_group
+        inputType: FreeText
+        description: ''
+        required: true
+        value: sentiment-analysis-v5
 
 # This section describes the Topics of the data pipeline
 topics:
