--- a/quix.yaml
+++ b/quix.yaml
@@ -168,7 +168,7 @@ deployments:
       cpu: 2000
       memory: 500
       replicas: 1
-    desiredStatus: Stopped
+    desiredStatus: Running
     variables:
       - name: input
         inputType: FreeText
